@@ -34,7 +34,6 @@ import io.crate.shade.org.elasticsearch.ElasticsearchTimeoutException;
 import io.crate.shade.org.elasticsearch.action.ActionFuture;
 import io.crate.shade.org.elasticsearch.client.transport.NoNodeAvailableException;
 import io.crate.shade.org.elasticsearch.client.transport.TransportClient;
-import io.crate.shade.org.elasticsearch.common.Strings;
 import io.crate.shade.org.elasticsearch.common.settings.ImmutableSettings;
 import io.crate.shade.org.elasticsearch.common.settings.Settings;
 import io.crate.shade.org.elasticsearch.common.transport.InetSocketTransportAddress;
@@ -49,7 +48,6 @@ import org.junit.rules.ExternalResource;
 import java.io.*;
 import java.lang.reflect.Field;
 import java.net.InetAddress;
-import java.net.URL;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.*;
@@ -173,25 +171,6 @@ public class CrateTestServer extends ExternalResource implements TestCluster {
 
     public static CrateTestServer fromFile(String pathToTarGzCrateDistribution, String clusterName) {
         return fromFile(pathToTarGzCrateDistribution).clusterName(clusterName).build();
-    }
-
-    public CrateTestServer(String clusterName, String crateVersion) {
-        this(clusterName, DownloadSources.VERSION(crateVersion));
-    }
-
-    public CrateTestServer(String clusterName, URL downloadURL) {
-       this(clusterName, DownloadSources.URL(downloadURL.toString()));
-    }
-
-    public CrateTestServer(String clusterName, DownloadSource downloadSource) {
-        this(clusterName,
-                downloadSource,
-                Utils.randomAvailablePort(),
-                Utils.randomAvailablePort(),
-                DEFAULT_WORKING_DIR,
-                InetAddress.getLoopbackAddress().getHostAddress(),
-                ImmutableSettings.EMPTY,
-                Strings.EMPTY_ARRAY);
     }
 
     private CrateTestServer(String clusterName,
